--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.2",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@tailwindcss/postcss7-compat": "^2.2.14",
+    "autoprefixer": "^9",
+    "postcss": "^7",
     "webpack-dev-server": "^4.2.1"
   }
 }
