--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/webpacker": "5.4.2",
     "autoprefixer": "^9",
     "postcss": "^7",
+    "postcss-cli": "^7.1.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
